--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PORT=3000
-MONGODB_URI=your_mongodb_uri_here(mongodb+srv://username:password@cluster.mongodb.net/appointment_system?retryWrites=true&w=majority)
+MONGODB_URI=your_mongodb_uri_here
 JWT_SECRET=your_jwt_secret_key_here
 NODE_ENV=development
